--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@
 
 url: http://justintoo.com
 title: Justin Too
-subtitle: Writing on <em>purpose</em>.
+subtitle: Why <em>walk</em> when you can <em>run, bike, and, well, pray</em>.
+# Writing on <em>purpose</em>.
 author: Justin Too
 simple_search: http://google.com/search
 description:
